--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
-                <div class="profile-img">NM</div>
+                <img src="./tausif.jpg" alt="Noor Masrur" class="profile-img">
                 <h1 class="hero-title">Noor Masrur</h1>
                 <p class="hero-subtitle">Software Engineer & Competitive Programmer</p>
                 <p class="hero-description">Expert in Java, Spring Boot, and Problem Solving with 400+ problems solved on Codeforces</p>
